@@ -21,6 +21,8 @@ Changes since 4.1
     - Fixes to printpf() to suppress printing of dispatchable load
       constraint section when there are no dispatchable loads and
       to never print line constraints for unconstrained lines.
+    - Fixed crash when using Knitro to solve cases with all
+      lines unconstrained.
 
 5/6/14
     - Modified savecase() to automatically add a comment line
